2002-08-17  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/system.cc (spanner_count): new function

	* lily/break-substitution.cc (fast_fubstitute_grob_list): special
	function for break substitutions on groblists in spanners. By
	reordering the elements of the list, we can skip large parts of
	the list in the break substitution. This brings the complexity of
	Lily back to more-or-less linear in the length of the score.

	Measured speed increase: 20 % (coriolan, without -O2)

	* lily/parse-scm.cc (parse_handler): don't construct a new strport
	for every parsing. This saves a lot of garbage on large files that
	have many # constructs.

	* lily/source-file.cc (init_port): add an SCM port to the
	sourcefile as well. 

	* lily/include/input-file-results.hh: move from
	file-results. Rename Input_file_settings to Input_file_results.

	* flower/ : remove simple-file-storage, mapped-file-storage,
	string-storage. Move source-file, binary-source-file to lily/

	* Documentation/header.html.in: remove FAQ

	* Documentation/index.texi (Top): reorganise

	* Documentation/topdocs/INSTALL.texi (Top): add note about fonts.

	* Documentation/topdocs/FAQ.texi: remove.

	* stepmake/stepmake/documentation-targets.make (footify): must
	depend on all .html files, otherwise rebuilds are broken due to
	the time stamps 

	* ly/declarations-init.ly (noBreak): set penalty to 10001 (>
	10000).

2002-08-16  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* ly/engraver-init.ly (ChordNamesContext): minimumverticalExtent
	-> minimumVerticalExtent

2002-08-16  Stephen Peters <portnoy@portnoy.org>

	* scm/pdf.scm, pdftex.scm: pdftex updates

	* scripts/ly2dvi.py: pdflatex support
	
2002-08-16  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/windows/installing.texi: Include info from Wiki. 

2002-08-16  Mats Bengtsson  <mats.bengtsson@s3.kth.se>

	* scripts/lilypond-book.py (output_dict): Replace
	\includegraphics{xxx.eps} -> \includegraphics{xxx} to 