@@ -9,6 +9,6 @@ smaller accidentals (default) or parentheses."
 \score { \notes {
     c''4
     cis''?4
-    \property Staff.Accidental \override #'cautionary-style = #'parentheses
+    \property Staff.Accidental \override #'style = #'parentheses
     cis''?4
     }}
