@@ -1,13 +1,1 @@
-\version "1.5.68"
 
-\score{
-	\notes\relative c''{
-		\property Score.beamQuantisation = #'none
-		% \property Score.beamQuantisation = #'normal
-		% \property Score.beamQuantisation = #'traditional
-		[g16 e f g]
-	}
-	\paper{
-		linewidth = -1.
-	}
-}
