@@ -1,13 +1,15 @@
 \version "1.5.68"
 
+%% FIXME
+
 \score { \notes \context Staff \transpose c''' {
   \key d \major
-  \property Staff.autoReminders = #'cautionary
+%  \property Staff.autoReminders = #'cautionary
   \property Staff.Accidental \override #'font-relative-size = #0
   <dis1 c> cis2 d
-  \property Staff.Accidental \override #'cautionary-size = #-1
+%  \property Staff.Accidental \override #'cautionary-size = #-1
   <dis1 c> cis2 d
-  \property Staff.Accidental \override #'paren-cautionaries = ##f
+%  \property Staff.Accidental \override #'paren-cautionaries = ##f
   <dis1 c> cis2 d
 
 }
