@@ -1,14 +1,1 @@
-\version "1.5.68"
 
-%non of the dynamics properties work anymore
-
-\score { 
-  \context Voice \notes\relative c {
-%        \stemDown\slurDown\tieDown
-
-        \property Voice.dynamicDirection = #1
-        \property Voice.dynamicPadding = #40
-        c \p c \<  \! c \ff\> c \!c-\p 
-
-  }
-}
