@@ -1,10 +1,14 @@
 \version "1.5.68"
 
-
+\header {
+    texidoc ="FIXME"
+    }
 %% Chord gurus, is this ok now??
 
 monstrous= \chords{
-    \property Score.chordInversion = ##t 
+
+%% fixme:
+%%    \property Score.chordInversion = ##t 
 
     % /c is/was missing:
     bes:6/+c
